tests/pass/0016_initialize_and_print_variables.ee
fn main() {
    let a = 1;
    let b = a + 1;
    debugPrint(b + a);
}