tests/fail/0057_main_must_not_take_parameters.ee
fn main(a, b) {
  print(a);
}
